<resources>
    <string name="app_name">Tickets</string>
    <string name="slogan">Discover your favorite movies</string>
    <string name="day_trending_notif_title">Today\'s trendings</string>
    <string name="day_trending_notif_dsc">Take a look on today\'s trendings</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="trending_movies_week">Trending Movies of the week</string>
    <string name="popular_series">Popular Series</string>
    <string name="show_more">Show more</string>

    <string name="videos">videos</string>

    <string name="horror_movies">Horror Movies</string>
    <string name="action_movies">Action Movies</string>
    <string name="adventure_movies">Adventure Movies</string>
    <string name="comedy_movies">Comedy Movies</string>
    <string name="drama_movies">Drama Movies</string>
    <string name="romance_movies">Romance Movies</string>
    <string name="war_movies">War Movies</string>
    <string name="documentary_movies">Documentary Movies</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="latest_movies">Top Rated Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="oops_no_previous_item_found">Oops, No previous item found</string>
    <string name="start_browsing_and_leave_this_on_us">Start browsing and leave this on us</string>
</resources>