<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.Home"
    android:background="@drawable/gradient_background">

    <ImageView
        android:id="@+id/trailer_image"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/trailer"
        android:scaleType="centerCrop"/>

    <ScrollView
        android:id="@+id/scrollView_Home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/trailer_image"
        >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                >


                <RelativeLayout
                    android:id="@+id/layout_title_trending_movie_week"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    >

                    <TextView
                        android:id="@+id/title_trending_movies_week"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="21sp"
                        android:text="@string/trending_movies_week"
                        android:textColor="@color/black"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show_more"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:textSize="10sp"
                        android:textColor="@color/black"/>

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_popular_movies_week_trailers"
                    android:layout_width="match_parent"
<<<<<<< HEAD
                    android:layout_height="230dp"
                    android:paddingBottom="0dp" />
=======
                    android:layout_height="200dp"
                    android:paddingBottom="5dp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                >


                <RelativeLayout
                    android:id="@+id/layout_latest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_marginBottom="5dp"
                    >

                    <TextView
                        android:id="@+id/title_latest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/latest_movies"
                        android:textColor="@color/black"
                        android:textSize="21sp"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show_more"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:textSize="10sp"
                        android:textColor="@color/black"/>

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/latest_rv"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:paddingBottom="5dp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                >


                <RelativeLayout
                    android:id="@+id/layout_upcoming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_marginBottom="5dp"
                    >

                    <TextView
                        android:id="@+id/title_upcoming"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/upcoming_movies"
                        android:textColor="@color/black"
                        android:textSize="21sp"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show_more"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:textSize="10sp"
                        android:textColor="@color/black"/>

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/upcoming_rv"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:paddingBottom="5dp" />
>>>>>>> 0ebc4fb34fc06bed9ca33b8fdf799dff5df7cea7


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/greyLight"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:orientation="vertical"
                >


                <RelativeLayout
                    android:id="@+id/layout_title_series"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_marginBottom="5dp"
                    >

                    <TextView
                        android:id="@+id/title_popular_series"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="21sp"
                        android:text="@string/popular_movies"
                        android:textColor="@color/black"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show_more"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:textSize="10sp"
                        android:textColor="@color/black"/>

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_popular_movies"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:paddingBottom="5dp"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>